시간 별로 바탕화면 변화게 변경!

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -38,7 +38,7 @@
     <script src="/lib/js/angular/textEditor/textAngular-sanitize.min.js"></script>
     <script src="/lib/js/angular/fileUpload/angular-file-upload-shim.js"></script>
     <script src="/lib/js/angular/fileUpload/angular-file-upload.min.js"></script>
-    <script src="/lib/js/angular/johayo/johayo-clock.min.js"></script>
+    <script src="/lib/js/angular/johayo/johayo-clock.js"></script>
     <script src="/lib/js/bootstrap/bootstrap.min.js"></script>
 
     <!-- app -->
