--- a/public/html/main/main.html
+++ b/public/html/main/main.html
@@ -7,8 +7,8 @@
         게시글이나 북마크 막막 추가해보셔도 됩니다..<br>
         언제든지 문의 있을시 위의 편지 모양을 클릭후 저한테 메세지를 보내주시면 답변 드리겠습니다..^^
     </div>
-    <div class="col-xs-12 box clock">
-        <johayo-clock></johayo-clock>
+    <div class="col-xs-12 box clock" style="background-color : {{'#' + (nowDate | date : 'HHmmss')}}">
+        <johayo-clock now-date="nowDate"></johayo-clock>
     </div>
 </div>
 <div class="col-xs-12 col-md-7 board-list">
