--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,6 +3,7 @@
 <head lang="ko">
     <meta charset="UTF-8">
     <meta name="author" content="DongJun Kwon" />
+    <meta name="google-site-verification" content="vK34-BRjecqUHIK1bvyN4FXYoRBD-3CiJl3r014bLH4" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true" />
     <title>johayo_Blog</title>
